infra/envs/prod/k8s/helm/stacks/nginx-gateway/resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default
  namespace: gateway-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: nginx
  infrastructure:
    annotations:
      oci.oraclecloud.com/load-balancer-type: "nlb"
      oci-network-load-balancer.oraclecloud.com/security-list-management-mode: "None"
      oci-network-load-balancer.oraclecloud.com/is-preserve-source: "true"
      oci-network-load-balancer.oraclecloud.com/backend-policy: "FIVE_TUPLE"
      oci-network-load-balancer.oraclecloud.com/external-ip-only: "true"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "*.leogues.com.br"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: leogues-wildcard-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-apex
      port: 443
      protocol: HTTPS
      hostname: "leogues.com.br"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: leogues-wildcard-tls
      allowedRoutes:
        namespaces:
          from: All
